--- a/BlazorApp/Pages/Index.razor
+++ b/BlazorApp/Pages/Index.razor
@@ -2,7 +2,7 @@
 
 <h1>Hello, world!</h1>
 
-Hi, I'm Aaron Jones. Welcome to your new app.
+Hi, I'm Aaron Jones. This is my new website I have being creating called Blazor. Pretty cool, don't you think.
 
 <SurveyPrompt Title="How is Blazor working for you guys?" />
 
